feat: added new tables Business and Location
